fix problem - about z-index

--- a/style.css
+++ b/style.css
@@ -1,24 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap");
-/* TEST CODE */
-.test {
-  width: 500px;
-  background-color: red;
-  margin: 0 auto;
-}
-
-.test h1 {
-  color: red;
-  font-size: 60px;
-}
-
-.test .song-list-wrap {
-  background-color: darkcyan;
-  border: 1px solid red;
-}
-
-.song-list-wrap {
-  border: 1px solid red;
-}
 
 * {
   box-sizing: border-box;
@@ -51,7 +31,8 @@ button {
   box-shadow: inset 10px 10px 80px rgb(38, 56, 77);
   max-width: 400px;
   width: 100%;
-  height: 700px;
+  /* height: 700px; */
+  height: 680px;
   margin-right: 50px;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -158,7 +139,13 @@ button {
   display: flex;
 }
 
+.song-info .song-info__song-name {
+  font-weight: 100;
+}
+
 .song-list-wrap {
+  position: relative;
+  z-index: 10;
   height: 220px;
   overflow: scroll;
   margin-bottom: 30px;
